Sun Aug 12 11:22:03 2001  George Lebl <jirka@5z.com>

	* gnome-dateedit.[ch]: Some cleanup, and make the time
	  reading/writing code be i18n correct (to a degree at least),
	  also fix possible bad strftime use.

	* gnome-entry.c: no comma after last enum element and unref
	  the property bag in finalize

	* gnome-font-picker.c: fix a possible crash and cleanup a bit of
	  code

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-geometry.[ch]: Moved to libgnome1compat/libgnomeui.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-unit-spinner.[ch]: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Don't install gnome-macros.h.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gtkrc*: Removed.

	* landscape.xpm, portrait.xpm: Removed.
	
2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-rexec-server.oafinfo: Removed.

	* gnome-remote-bootstrap.c: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* wap-textfu.[ch]: Removed.

	* gnome-ditem-edit.[ch]: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-icon-item.[ch]: Removed.
	* gnome-icon-text.[ch]: Removed.

	* gnome-icon-list.c: Use the new GnomeCanvasRichText.
	(FIXME: Incomplete).

2001-08-11  Martin Baulig  <baulig@suse.de>

	* oafgnome.[ch]: Removed.

2001-08-09  Michael Meeks  <michael@ximian.com>

	* gnome-paper-selector.[ch]: Kill, now in libgnomeprintui.

2001-08-07  Darin Adler  <darin@bentspoon.com>

	* oafgnome.c: Remove unnecessary includes of now-nonexistent
	headers to make things compile.

2001-08-07  Michael Meeks  <michael@ximian.com>

	* oafgnome.c: mostly port to gnome 2.0 and bonobo-activation.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* gnome-remote-bootstrap.c:
	* libgnomeui.h:
	A couple more places where gnome-init.h needs to be changed
	to gnome-ui-init.h.

2001-08-06  Peter Williams  <peterw@ximian.com>

	* Makefile.am, gnome-ui-init.c, gnome-window.c: Track the
	rename of gnome-init.c to gnome-ui-init.c
